# git-grift

./: .pre-commit-config.yaml  Cargo.toml  README.md
grift-cli/: Cargo.toml
grift-cli/src/: args.rs  completions.rs  init.rs  main.rs
grift-core/: Cargo.toml  build.rs
grift-core/src/: config.rs  git_config.rs  github.rs  lib.rs  rpc.rs
grift-daemon/: Cargo.toml
grift-daemon/src/: db.rs  errors.rs  grifter.rs  main.rs
proto/: grift.proto  init_repo.proto
