[workspace]
resolver = "2"
members = [
    "grift-core",
    "grift-cli",
    "grift-daemon",
]

[workspace.package]
version = "0.0.1"
authors = ["David R. Morrison"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
grift-core.path = "grift-core"

clap = { version = "4.5.16", features = ["cargo", "derive", "string"] }
clap_complete = "4.5.23"
dirs = "5.0.1"
eyre = "0.6.12"
git2 = "0.19.0"
octocrab = "0.39.0"
sqlx = "0.8.0"
tokio = { version = "1.39.3", features = ["full"] }
