[package]
name = "grift"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
eyre = { workspace = true }
git2 = { workspace = true }
grift-core = { workspace = true }
tokio = { workspace = true }
