[package]
name = "grift-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "grift"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
eyre = { workspace = true }
git2 = { workspace = true }
grift-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
