[package]
name = "grift-core"
version.workspace = true
edition.workspace = true

[dependencies]
eyre = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
hyper-util = { workspace = true }
octocrab = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
users = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
tonic-build = { workspace = true }
